--- a/app/styles.css
+++ b/app/styles.css
@@ -5,41 +5,134 @@ body {
   /* font-family: 'Press Start 2P', system-ui; */
   /* font-family: 'Wallpoet', sans-serif; */
   font-family: 'Cute Font', sans-serif;
+  /* font-family: 'monocraft nerd font'; */
   font-size: 16px;
+  text-shadow: 1px 1px black,
+    -1px -1px black;
+}
+main {
+  padding: 0 1rem;
 }
 
 .component {
-  text-align: right;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 64rem;
 }
 
 .component-title {
-  text-align: center;
   font-size: 1.5rem;
+  padding-top: 1rem;
 }
 
 .component-sensors {
   display: flex;
   gap: 1rem;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .component-sensor {
-  flex: 1;
-  border: 2px dotted white;
+  border: 1px solid white;
   border-radius: 0.2rem;
-  padding: 0.5rem;
+  padding: 1rem 0.5rem 0 0.5rem;
+  width: 10rem;
+  height: 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgba(1, 1, 1, 0.3);
+  overflow: hidden;
+  position: relative;
 }
 
 .component-sensor-value {
   font-size: 3rem;
+  position: relative;
+  /* padding-top: 1rem; */
+  /* overflow: hidden; */
 }
 
 .component-sensor-other {
   display: flex;
   font-size: 1.5rem;
   gap: 0.5rem;
+  position: relative;
 }
 
 .component-sensor-other > div {
   flex: 1;
 }
 
+.component-vumeter {
+  position: absolute;
+  width: 13rem;
+  height: 13rem;
+  border-style:  solid;
+  border-color: greenyellow red transparent greenyellow ;
+  border-width: 1px 2px 0 1px;
+  border-radius: 8rem;
+  top: -0.5rem;
+  right: -1.6rem;
+  z-index: -1;
+}
+
+.component-vumeter-needle {
+  position: absolute;
+  width: 1px;
+  height: 13.5rem;
+  /* background-image: linear-gradient(180deg, cyan 50%, #911191 50%); */
+  background-color: orange;
+  top: -0.25rem;
+  left: calc(50% - 1px);
+  animation: move 3s alternate infinite;
+  z-index: 0;
+  /* border: 2px solid red; */
+}
+
+.component-vumeter-needle::before {
+  content: '';
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  background-color: #111111;
+  top: calc(50% - 0.5rem);
+  right: -0.5rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem 0.1rem orange;
+}
+
+@keyframes move {
+  from {
+    transform: rotateZ(-55deg);
+  }
+  to {
+    transform: rotateZ(55deg);
+  }
+}
+
+.component-sensor-history {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  align-items: end;
+  top: 0;
+  z-index: -1;
+  /* animation: moveHistory 1s infinite linear; */
+}
+
+@keyframes moveHistory {
+  from {
+    transform: translateX(0);
+  } to {
+    transform: translate(-0.1rem);
+  }
+}
+
+.component-sensor-history-item {
+  flex: 1;
+  /* height: 100%; */
+  border-top: 1px solid rgba(255, 255, 0, 0.1);
+  background-color: rgba(255, 255, 0, 0.3);
+}
