--- a/app/styles.css
+++ b/app/styles.css
@@ -37,13 +37,10 @@ main {
   border-radius: 0.2rem;
   padding: 1rem 0.5rem 0 0.5rem;
   width: 10rem;
-  height: 6rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background-color: rgba(1, 1, 1, 0.3);
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
+  box-shadow: 0 0 0.2rem 0.2rem rgba(0, 0, 0, 0.9) inset;
 }
 
 .component-sensor-value {
@@ -57,7 +54,6 @@ main {
   display: flex;
   font-size: 1.5rem;
   gap: 0.5rem;
-  position: relative;
 }
 
 .component-sensor-other > div {
@@ -66,28 +62,30 @@ main {
 
 .component-vumeter {
   position: absolute;
-  width: 13rem;
-  height: 13rem;
+  width: 12rem;
+  height: 12rem;
   border-style:  solid;
   border-color: greenyellow red transparent greenyellow ;
   border-width: 1px 2px 0 1px;
   border-radius: 8rem;
-  top: -0.5rem;
-  right: -1.6rem;
+  top: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: -1;
 }
 
 .component-vumeter-needle {
   position: absolute;
   width: 1px;
-  height: 13.5rem;
+  height: 12rem;
   /* background-image: linear-gradient(180deg, cyan 50%, #911191 50%); */
   background-color: orange;
-  top: -0.25rem;
+  top: 0rem;
   left: calc(50% - 1px);
-  animation: move 3s alternate infinite;
+  /* animation: move 3s alternate infinite; */
   z-index: 0;
   /* border: 2px solid red; */
+  transition: .5s;
 }
 
 .component-vumeter-needle::before {
