--- a/app/theme2.css
+++ b/app/theme2.css
@@ -2,6 +2,10 @@
     --size: 8rem;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
     background-color: #000000;
     color: #fafafa;
@@ -38,8 +42,8 @@ body {
   
   .component-sensor {
     border-style: solid;
-    border-width: 1px;
-    border-color: greenyellow red transparent greenyellow;
+    border-width: 2px;
+    border-color: white red transparent white;
     border-radius: var(--size);
     padding: 1rem 0rem;
     box-sizing: border-box;
@@ -77,28 +81,30 @@ body {
   
   .component-vumeter-needle {
     position: absolute;
-    width: 1px;
+    width: 2px;
     height: var(--size);
     background-image: linear-gradient(180deg, orange 70%, transparent 70%);
     /* background-color: orange; */
-    top: 0rem;
+    top: -1px;
     left: calc(50% - 1px);
-    /* animation: move 3s alternate infinite; */
+    /* animation: moveNeedle 4s alternate linear infinite; */
     z-index: 0;
     /* border: 2px solid red; */
-    transition: .5s;
+    transition: 2s;
   }
   
   .component-vumeter-needle::before {
     content: '';
-    width: 1rem;
-    height: 1rem;
+    width: 0.5rem;
+    height: 0.5rem;
+    border: 1px solid white;
     position: absolute;
     background-color: #111111;
-    top: calc(50% - 0.5rem);
-    right: -0.5rem;
+    top: calc(50% - 0.25rem);
+    left: -0.2rem;
     border-radius: 2rem;
     box-shadow: 0 0 1rem 0.1rem orange;
+    box-sizing: border-box;
   }
   
   .component-sensor-history {
@@ -112,11 +118,19 @@ body {
     transform: translateX(-50%) translateY(-50%);
     box-sizing: border-box;
     z-index: -1;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     border-radius: 0.1rem;
-    /* animation: moveHistory 1s infinite linear; */
   }
   
+  @keyframes moveNeedle {
+    from {
+      transform: rotateZ(-134deg);
+    }
+    to {
+      transform: rotateZ(134deg);
+    }
+  }
+
   .component-sensor-history-item {
     flex: 1;
     /* height: 100%; */
