--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --color_primary : #FFCCAA;
+}
+
 body {
   background-color: #000000;
   color: #fafafa;
@@ -5,41 +9,140 @@ body {
   /* font-family: 'Press Start 2P', system-ui; */
   /* font-family: 'Wallpoet', sans-serif; */
   font-family: 'Cute Font', sans-serif;
+  /* font-family: 'monocraft nerd font'; */
   font-size: 16px;
+  text-shadow: 1px 1px black,
+    -1px -1px black;
+}
+main {
+  padding: 0 1rem;
 }
 
 .component {
-  text-align: right;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 64rem;
 }
 
 .component-title {
-  text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  padding: 1rem;
 }
 
 .component-sensors {
   display: flex;
   gap: 1rem;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .component-sensor {
-  flex: 1;
-  border: 2px dotted white;
   border-radius: 0.2rem;
-  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5rem 0 0 0;
+  width: 12rem;
+  background-color: rgba(255, 200, 00, 0.1);
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 0 0.1rem 0.5rem rgba(255, 200, 0, 0.1);
 }
 
 .component-sensor-value {
   font-size: 3rem;
+  position: relative;
+  /* padding-top: 1rem; */
+  /* overflow: hidden; */
 }
 
 .component-sensor-other {
   display: flex;
   font-size: 1.5rem;
   gap: 0.5rem;
+  position: relative;
 }
 
 .component-sensor-other > div {
   flex: 1;
 }
 
+.component-sensor-vumeter {
+  position: absolute;
+  width: calc(12rem + 1px);
+  height: calc(12rem + 1px);
+  border-style:  solid;
+  border-color: white red transparent white ;
+  border-width: 2px;
+  border-radius: 8rem;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.component-sensor-vumeter-needle {
+  position: absolute;
+  width: 1px;
+  border-radius: 4px;
+  border: 1px solid black;
+  height: calc(12rem + 1px);
+  /* background-image: linear-gradient(180deg, cyan 50%, #911191 50%); */
+  background-color: orange;
+  top: 0rem;
+  left: 50%;
+  transition: 1.5s;
+  z-index: 0;
+  /* border: 2px solid red; */
+}
+
+.component-sensor-vumeter-needle::before {
+  content: '';
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  background-color: #000000;
+  top: calc(50% - 0.5rem);
+  right: -0.5rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem 0.1rem orange;
+  border: 1px solid #aaa;
+  box-shadow: 0 0 0.1rem orange;
+  box-sizing: border-box;
+}
+
+@keyframes move {
+  from {
+    transform: rotateZ(-55deg);
+  }
+  to {
+    transform: rotateZ(55deg);
+  }
+}
+
+.component-sensor-history {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 40%;
+  align-items: end;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  /* animation: moveHistory 1s infinite linear; */
+}
+
+@keyframes moveHistory {
+  from {
+    transform: translateX(0);
+  } to {
+    transform: translate(-0.1rem);
+  }
+}
+
+.component-sensor-history-item {
+  flex: 1;
+  /* height: 100%; */
+  border-top: 1px solid rgba(255, 255, 0, 0.3);
+  background-color: rgba(255, 255, 0, 0.2);
+}
