--- a/app/styles.css
+++ b/app/styles.css
@@ -15,23 +15,30 @@ body {
     -1px -1px black;
 }
 main {
-  padding: 0 1rem;
+  max-width: 64rem;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  padding: 0.5rem;
 }
 
 .component {
-  margin: 0 auto;
   text-align: center;
-  max-width: 64rem;
+  border: 1px solid #555;
+  border-radius: 0.5rem;
+  padding: 0rem 1rem 1rem 1rem;
+  /* width: min-content; */
 }
 
 .component-title {
   font-size: 1.2rem;
-  padding: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .component-sensors {
   display: flex;
-  gap: 1rem;
+  gap: 1.5rem;
   justify-content: space-around;
   flex-wrap: wrap;
 }
@@ -126,7 +133,6 @@ main {
   width: 100%;
   height: 40%;
   align-items: end;
-  top: 0;
   bottom: 0;
   z-index: -1;
   /* animation: moveHistory 1s infinite linear; */
