--- a/app/styles.css
+++ b/app/styles.css
@@ -31,6 +31,12 @@ main {
   /* width: min-content; */
 }
 
+/* @media screen and (min-width: 800px) {
+  .component {
+    width: auto;
+  }
+} */
+
 .component-title {
   font-size: 1.2rem;
   padding-bottom: 0.5rem;
@@ -49,7 +55,8 @@ main {
   flex-direction: column;
   justify-content: space-between;
   padding: 0.5rem 0 0 0;
-  width: 12rem;
+  width: 10rem;
+  height: 4.5rem;
   background-color: rgba(255, 200, 00, 0.1);
   overflow: hidden;
   position: relative;
@@ -57,7 +64,7 @@ main {
 }
 
 .component-sensor-value {
-  font-size: 3rem;
+  font-size: 2rem;
   position: relative;
   /* padding-top: 1rem; */
   /* overflow: hidden; */
@@ -65,7 +72,7 @@ main {
 
 .component-sensor-other {
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   gap: 0.5rem;
   position: relative;
 }
@@ -76,8 +83,8 @@ main {
 
 .component-sensor-vumeter {
   position: absolute;
-  width: calc(12rem + 1px);
-  height: calc(12rem + 1px);
+  width: calc(10rem + 1px);
+  height: calc(10rem + 1px);
   border-style:  solid;
   border-color: white red transparent white ;
   border-width: 2px;
@@ -93,7 +100,7 @@ main {
   width: 1px;
   border-radius: 4px;
   border: 1px solid black;
-  height: calc(12rem + 1px);
+  height: calc(10rem + 1px);
   /* background-image: linear-gradient(180deg, cyan 50%, #911191 50%); */
   background-color: orange;
   top: 0rem;
