--- a/app/styles.css
+++ b/app/styles.css
@@ -13,149 +13,48 @@ body {
   font-size: 16px;
   text-shadow: 1px 1px black,
     -1px -1px black;
+  margin: 0;
 }
 main {
-  max-width: 64rem;
+  max-width: 48rem;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 0.5rem;
   padding: 0.5rem;
 }
 
-.component {
-  text-align: center;
-  border: 1px solid #555;
-  border-radius: 0.5rem;
-  padding: 0rem 1rem 1rem 1rem;
-  /* width: min-content; */
+aside {
+  padding: 1rem;
+  background-image: linear-gradient(30deg, #111 50%, #222 50%);
 }
 
-/* @media screen and (min-width: 800px) {
-  .component {
-    width: auto;
-  }
-} */
-
-.component-title {
-  font-size: 1.2rem;
-  padding-bottom: 0.5rem;
-}
-
-.component-sensors {
-  display: flex;
-  gap: 1.5rem;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.component-sensor {
-  border-radius: 0.2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 0.5rem 0 0 0;
-  width: 10rem;
-  height: 4.5rem;
-  background-color: rgba(255, 200, 00, 0.1);
-  overflow: hidden;
-  position: relative;
-  box-shadow: 0 0 0.1rem 0.5rem rgba(255, 200, 0, 0.1);
-}
-
-.component-sensor-value {
-  font-size: 2rem;
-  position: relative;
-  /* padding-top: 1rem; */
-  /* overflow: hidden; */
-}
-
-.component-sensor-other {
-  display: flex;
-  font-size: 1.2rem;
-  gap: 0.5rem;
-  position: relative;
-}
-
-.component-sensor-other > div {
-  flex: 1;
-}
-
-.component-sensor-vumeter {
-  position: absolute;
-  width: calc(10rem + 1px);
-  height: calc(10rem + 1px);
-  border-style:  solid;
-  border-color: white red transparent white ;
-  border-width: 2px;
-  border-radius: 8rem;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: -1;
-}
-
-.component-sensor-vumeter-needle {
-  position: absolute;
-  width: 1px;
-  border-radius: 4px;
-  border: 1px solid black;
-  height: calc(10rem + 1px);
-  /* background-image: linear-gradient(180deg, cyan 50%, #911191 50%); */
-  background-color: orange;
-  top: 0rem;
-  left: 50%;
-  transition: 1.5s;
-  z-index: 0;
-  /* border: 2px solid red; */
-}
-
-.component-sensor-vumeter-needle::before {
-  content: '';
-  width: 1rem;
-  height: 1rem;
-  position: absolute;
-  background-color: #000000;
-  top: calc(50% - 0.5rem);
-  right: -0.5rem;
+.btn-menu {
   border-radius: 2rem;
-  box-shadow: 0 0 1rem 0.1rem orange;
-  border: 1px solid #aaa;
-  box-shadow: 0 0 0.1rem orange;
-  box-sizing: border-box;
+  width: 2rem;
+  height: 2rem;
+  opacity: 0.9;
+  border: 2px solid #111;
+  transition: 0.1s ease-in all;
+  background: #444;
+  box-shadow: 0 0.1rem 0.1rem rgba(255, 255, 255, 0.3) inset,
+    0 -0.1rem 0.1rem rgba(0,0,0,0.5) inset;
 }
 
-@keyframes move {
-  from {
-    transform: rotateZ(-55deg);
-  }
-  to {
-    transform: rotateZ(55deg);
-  }
+.btn-menu:active {
+  transform: scale(0.99);
+  box-shadow: none;
 }
 
-.component-sensor-history {
-  display: flex;
-  position: absolute;
-  width: 100%;
-  height: 40%;
-  align-items: end;
-  bottom: 0;
-  z-index: -1;
-  /* animation: moveHistory 1s infinite linear; */
+.menu {
+  position: fixed;
+  transform: translateX(-100%);
+  transition: 0.5s ease-in-out all;
+  border-radius: 0 0.5rem 0.5rem 0;
 }
 
-@keyframes moveHistory {
-  from {
-    transform: translateX(0);
-  } to {
-    transform: translate(-0.1rem);
-  }
-}
-
-.component-sensor-history-item {
-  flex: 1;
-  /* height: 100%; */
-  border-top: 1px solid rgba(255, 255, 0, 0.3);
-  background-color: rgba(255, 255, 0, 0.2);
+.menu.show {
+  box-shadow: 0.1rem 0 1rem #555;
+  transform: translateX(0);
 }
