--- a/app/styles.css
+++ b/app/styles.css
@@ -27,7 +27,7 @@ main {
 
 aside {
   padding: 1rem;
-  background-image: linear-gradient(30deg, #111 50%, #222 50%);
+  background-image: linear-gradient(60deg, #111 50%, #222 50%);
 }
 
 .btn-menu {
@@ -40,6 +40,8 @@ aside {
   background: #444;
   box-shadow: 0 0.1rem 0.1rem rgba(255, 255, 255, 0.3) inset,
     0 -0.1rem 0.1rem rgba(0,0,0,0.5) inset;
+  position: fixed;
+  bottom: 0;
 }
 
 .btn-menu:active {
@@ -52,9 +54,10 @@ aside {
   transform: translateX(-100%);
   transition: 0.5s ease-in-out all;
   border-radius: 0 0.5rem 0.5rem 0;
+  border: 1px solid #333;
 }
 
 .menu.show {
-  box-shadow: 0.1rem 0 1rem #555;
+  box-shadow: 0.1rem 0 0.5rem #555;
   transform: translateX(0);
 }
