adds refresh time input

--- a/app/theme2.css
+++ b/app/theme2.css
@@ -1,26 +1,31 @@
 .component {
   text-align: center;
-  border: 1px solid #555;
-  border-radius: 0.5rem;
-  padding: 0 1rem 1rem 1rem;
+  border: 1px solid #333;
+  border-radius: 0.25rem;
+  padding: 0 0.5rem 0.5rem 0.5rem;
 }
 
 .component-title {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.25rem;
 }
 
 .component-sensors {
   display: flex;
-  gap: 1.5rem;
+  gap: 0.5rem;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .component-sensor {
-  border-radius: 0.2rem;
+  border-radius: 0.1rem;
   border: 1px solid #aaa;
   width: 8rem;
   transition: 0.5s ease-in-out all;
+}
+
+.component-sensor-title {
+  font-size: 14px;
+  opacity: 0.9;
 }
 
 .component-sensor-value {
@@ -35,6 +40,7 @@
 .component-sensor-other > div {
   flex: 1;
   padding: 0 0.25rem;
+  opacity: 0.8;
 }
 
 .component-sensor.warning {
