--- a/app/styles.css
+++ b/app/styles.css
@@ -16,7 +16,7 @@ body {
   margin: 0;
 }
 main {
-  max-width: 48rem;
+  max-width: 56rem;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -25,16 +25,11 @@ main {
   padding: 0.5rem;
 }
 
-aside {
-  padding: 1rem;
-  background-image: linear-gradient(60deg, #111 50%, #222 50%);
-}
-
 .btn-menu {
   border-radius: 2rem;
   width: 2rem;
   height: 2rem;
-  opacity: 0.9;
+  opacity: 0.6;
   border: 2px solid #111;
   transition: 0.1s ease-in all;
   background: #444;
@@ -53,11 +48,19 @@ aside {
   position: fixed;
   transform: translateX(-100%);
   transition: 0.5s ease-in-out all;
-  border-radius: 0 0.5rem 0.5rem 0;
+  border-radius: 0 0 0.5rem 0;
   border: 1px solid #333;
+  padding: 1rem;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  opacity: 0.9;
+  background-color: rgba(0,0,0,0.6);
+  backdrop-filter: blur(3px);
 }
 
 .menu.show {
-  box-shadow: 0.1rem 0 0.5rem #555;
+  box-shadow: 0.1rem 0.1rem 1rem #555;
   transform: translateX(0);
 }
