--- a/app/theme1.css
+++ b/app/theme1.css
@@ -1,9 +1,9 @@
 
 .component {
   text-align: center;
-  border: 1px solid #555;
+  border: 1px solid #333;
   border-radius: 0.5rem;
-  padding: 0rem 1rem 1rem 1rem;
+  padding: 0rem 0.5rem 0.5rem 0.5rem;
   /* width: min-content; */
 }
 
@@ -20,7 +20,7 @@
 
 .component-sensors {
   display: flex;
-  gap: 1.5rem;
+  gap: 1.25rem;
   justify-content: space-around;
   flex-wrap: wrap;
 }
@@ -37,6 +37,18 @@
   overflow: hidden;
   position: relative;
   box-shadow: 0 0 0.1rem 0.5rem rgba(255, 200, 0, 0.1);
+}
+
+.component-sensor-title {
+  position: absolute;
+  right: 50%;
+  top: 2.5rem;
+  transform: translateX(50%);
+  width: 100%;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0.4;
+  z-index: -1;
 }
 
 .component-sensor-value {
